--- a/cdk/hello-app/BUILD.bazel
+++ b/cdk/hello-app/BUILD.bazel
@@ -7,10 +7,12 @@ js_library(
         "app.js",
         "//:node_modules/@aws-cdk/aws-apigatewayv2-alpha",
         "//:node_modules/@aws-cdk/aws-apigatewayv2-integrations-alpha",
+        "//:node_modules/@aws-cdk/aws-apprunner-alpha",
         "//:node_modules/aws-cdk-lib",
     ],
     data = [
         "//go/hello-app:lambda",
+        "//go/hello-app-docker:image.tar",
         "//java/hello-app:hello-app_deploy.jar",
     ],
 )
