--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"dependencies": {
 		"@aws-cdk/aws-apigatewayv2-alpha": "2.56.1-alpha.0",
 		"@aws-cdk/aws-apigatewayv2-integrations-alpha": "2.56.1-alpha.0",
+		"@aws-cdk/aws-apprunner-alpha": "2.57.0-alpha.0",
 		"@bazel/runfiles": "^5.7.3",
 		"aws-cdk-lib": "^2.56.1",
 		"constructs": "^10.1.200"
